# tethysapp-tethys_dash

./: .coveragerc  .gitignore  .prettierignore  CLAUDE.md  MANIFEST.in  README.md  collect_plugin_thumbnails.py  package-lock.json  package.json  pyproject.toml  requirements-ci.txt  setup.py
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  dashboard.rst  dashboard_editing.rst  dashboard_settings.rst  dashboard_visualizations.rst  feedback.rst  index.rst  installation.rst  landing_page.rst  plugins.rst  variable_inputs.rst
docs/source/maps/: attributes_and_popups_tab.rst  create_map.rst  layer_configuration.rst  layer_tab.rst  legend_tab.rst  maps.rst  popup_modal.rst  source_tab.rst  style_tab.rst
docs/source/tutorials/: geoglows_demo.rst  geoglows_demo_part2.rst  popup_modal_tutorial.rst  rfc_max_stage_analysis.rst  tutorials.rst
docs/source/usage/: add_dashboard_items.rst  adding_tabs.rst  copy_dashboard.rst  copy_dashboard_items.rst  delete_dashboard.rst  delete_dashboard_items.rst  edit_dashboard_item_visualizations.rst  edit_dashboard_items.rst  edit_dashboard_settings.rst  landing_page.rst  move_resize_dashboard_items.rst  revert_dashboard_items.rst  save_dashboard_items.rst  settings_tab.rst  share_dashboard.rst  usage.rst  visualization_tab.rst
docs/spikes/: 2026-05-04-popup-modal-rendering-spike.md
docs/static/css/: custom.css
reactapp/: App.js  App.scss  index.js
reactapp/__tests__/: App.test.js  env.test.js  index.test.js  loadEnv.js  setupTests.js  test.env
reactapp/__tests__/components/appTour/: AppTour.test.js
reactapp/__tests__/components/buttons/: DashboardItemDropdown.test.js  TooltipButton.test.js
reactapp/__tests__/components/contexts/: AppTourContext.test.js  FeatureScopedVariableInputs.test.js  LayoutAlertContext.test.js  ModalPriorityContext.test.js  WebSocketContext.test.js
reactapp/__tests__/components/dashboard/: DashboardItem.test.js  DashboardItemDropdown.test.js  DashboardLayout.test.js  DashboardLayoutAlerts.test.js  DashboardTabs.test.js  DeleteConfirmation.test.js
reactapp/__tests__/components/error/: DebugError.test.js  ErrorBoundary.test.js  GenericError.test.js  NotFound.test.js
reactapp/__tests__/components/inputs/: CSVUploader.test.js  ColorPicker.test.js  ColorPickerPopover.test.js  Confirmation.test.js  CustomPicker.test.js  DataInput.test.js  DataRadioSelect.test.js  DataSelect.test.js  DatePicker.test.js  DateRange.test.js  DraggableList.test.js  FileUpload.test.js  InputTable.test.js  MultiIinput.test.js  NormalInput.test.js  RuleEditor.test.js  RuleStyleEditor.test.js  Slider.test.js  TextEditor.test.js  dateUtils.test.js
reactapp/__tests__/components/landingPage/: ContextMenu.test.js  DashboardCard.test.js
reactapp/__tests__/components/layout/: Header.test.js  Layout.test.js
reactapp/__tests__/components/loader/: AppLoader.test.js  DashboardLoader.test.js  IdleTimeManager.test.js  LoadingAnimation.test.js
reactapp/__tests__/components/map/: DrawInteractions.test.js  ExtentInteraction.test.js  LayersControl.test.js  Legend.test.js  LegendRenderer.test.js  Map.test.js  ModuleLoader.test.js  colorRamps.test.js  geoTIFFStyle.test.js  moduleMap.test.js  utilities.test.js
reactapp/__tests__/components/modals/: AppInfo.test.js  DashboardEditor.test.js  DashboardImport.test.js  DashboardThumbnail.test.js  NewDashboard.test.js  PermissionGroups.test.js  Permissions.test.js  VisualizationPermissions.test.js  utilities.test.js
reactapp/__tests__/components/views/: Dashboard.test.js  LandingPage.test.js
reactapp/__tests__/components/visualizations/: Base.test.js  BasePlot.csvDownload.test.js  BasePlot.subplotToggle.test.js  BasePlot.test.js  Card.test.js  (+13 more)
reactapp/__tests__/services/: utilities.test.js
reactapp/__tests__/utilities/: constants.js  customRender.js  handlers.js  mockWebSocket.js
reactapp/components/appTour/: AppTour.js
reactapp/components/contexts/: AppTourContext.js  Contexts.js  FeatureScopedVariableInputs.js  MapContext.js  ModalPriorityContext.js  WebSocketContext.js
reactapp/components/dashboard/: CustomAlert.js  DashboardItem.js  DashboardItemDropdown.js  DashboardLayout.js  DashboardTabs.js
reactapp/components/inputs/: CSVUploader.js  CheckboxInput.js  ColorPicker.js  ColorPickerPopOver.js  Confirmation.js  Custom.js  CustomPicker.js  DataInput.js  DataRadioSelect.js  DataSelect.js  DateFormat.js  DatePicker.css  DatePicker.js  DateRange.js  DeleteConfirmation.js  FileUpload.js  InputTable.js  NormalInput.js  RuleEditor.js  RuleStyleEditor.js  Slider.js  TextArea.js  TextEditor.js  Toggle.js  dateUtils.js
reactapp/components/landingPage/: ContextMenu.js  DashboardCard.js
reactapp/components/layout/: Header.js  Layout.js
reactapp/components/loader/: AppLoader.js  DashboardLoader.js  IdleTimerManager.js  LoadingAnimation.js
reactapp/components/map/: DrawInteractions.js  ExtentInteraction.js  LayersControl.js  LegendControl.js  LegendRenderer.js  Map.js  ModuleLoader.js  colorRamps.js  geoTIFFStyle.js  moduleMap.js  utilities.js
reactapp/components/modals/: AppInfo.js  DashboardEditor.js  DashboardImport.js  NewDashboard.js  PermissionGroups.js  Permissions.js  VisualizationPermissions.js  utilities.js  wideModal.css
reactapp/components/visualizations/: Base.js  BasePlot.js  DataTable.js  Image.js  ImageCollection.js  ImageSequence.js  LiveChat.js  Map.js  ModuleLoader.js  SubplotToggleControl.js  Text.js  VariableInput.js  remoteLoader.js  runtimeLayerFetcher.js  subplotToggle.js  utilities.js
reactapp/config/: development.env  webpack.config.js
reactapp/hooks/: useDynamicScript.js
reactapp/services/: utilities.js
reactapp/services/api/: app.js  client.js
reactapp/views/: Dashboard.js  LandingPage.js
tethysapp/tethysdash/: app.py  cli.py  collect_plugin_static.py  collect_plugin_thumbnails.py  controllers.py  exceptions.py  model.py  plugin_helpers.py  sessions.py  visualizations.py
tethysapp/tethysdash/alembic/: env.py
tethysapp/tethysdash/tests/: conftest.py
(+125 files in other folders)
