[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysdash"
dynamic = ["version"]
description = "A Tethys App for no code/low code web application development app"
authors = [{ name = "Corey Krewson", email = "ckrewson@aquaveo.com" }]
license-files = ["LICENSE"]
keywords = [""]
readme = "README.md"
dependencies = [
    "hjson==3.1",
    "nh3==0.2.21",
    "beautifulsoup4==4.13.4",
    "better_profanity==0.7.0",
    "bleach==6.1.0",
    "bleach[css]",
    "channels_redis==4.3.0",
    "django-redis==6.0.0",
    "cssutils==2.11.1",
    "pytest-django",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "intake==2.0.7",
    "djangorestframework",
    "alembic==1.14.0",
    "xmltodict==0.14.2",
    "psycopg2-binary==2.9.11",
    "geoalchemy2==0.18.4",
    "tethys-platform>=4.5.0",
    "python-dateutil"
]
classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Find namespace packages like `tethysapp.tethysdash`
include = ["tethysapp*"]
exclude = ["docs*", "tests*", "reactapp*", "claude*"]

[tool.setuptools_scm]
write_to = "tethysapp/tethysdash/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
# The key "" applies to all packages
"*" = [
    "alembic.ini",
    "public/**/*",
    "*.js",
    "*.png",
    "*.gif",
    "*.jpg",
    "*.html",
    "*.css",
    "*.gltf",
    "*.json",
    "*.geojson",
    "*.svg",
]

[tool.setuptools.exclude-package-data]
# Local runtime data under public/data is not part of the distribution.
"*" = ["public/data/*", "public/data/**/*"]

# Optional: for compatibility with pytest if you run tests with `pytest`
[tool.pytest.ini_options]
django_find_project = false

[tool.ruff]
# The test suite uses 3.12+ f-string syntax (PEP 701), so 3.12 is the real
# floor for running tests even though packaging classifiers still list 3.10.
target-version = "py312"
# setuptools_scm generates this file; never lint it.
extend-exclude = ["tethysapp/tethysdash/_version.py"]

[tool.ruff.lint]
# Starter ruleset: pyflakes (F) + the pycodestyle errors ruff enables by
# default (E4/E7/E9). Line length (E501) is intentionally left out to avoid
# churn on the existing tree; tighten later if desired.
select = ["E4", "E7", "E9", "F"]

[project.urls]
homepage = "https://tethysdashdocs.readthedocs.io/en/latest/"
documentation = "https://tethysdashdocs.readthedocs.io/en/latest/"
repository = "https://github.com/tethysplatform/tethysapp-tethys_dash"

[project.scripts]
tethysdash = "tethysapp.tethysdash.cli:main"
